Layout drastically changed, still need to fix margins and maybe alignment. Getting there

--- a/assets/themes/twitter-sandbox/css/style.less
+++ b/assets/themes/twitter-sandbox/css/style.less
@@ -1,12 +1,14 @@
 @import url(http://fonts.googleapis.com/css?family=Asap);
-
+@import url(http://fonts.googleapis.com/css?family=Codystar);
 @headerBackground: #B0C7BF;
 @lightishBlue: #DCF3F8;
 
 /* Override some defaults */
 
 html, body {
-  background-color: @lightishBlue;
+  //background-color: @lightishBlue;
+  background-image: url('/assets/themes/twitter-sandbox/pics/60degree_gray.png');
+  background-repeat: repeat;
   /*DBG Modifications*/
 
   font-family: 'Asap', sans-serif;
@@ -37,9 +39,13 @@ html, body {
 
 
 .container-fluid {
-    width:940px;
+    width:630px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.container {
+    width:630px;
 }
 
 .container > footer {
@@ -53,8 +59,13 @@ html, body {
 /* The white background content wrapper */
 .content {
   background-color: #fff;
+  //Min-height hack
+  min-height: 484px;
+  height:auto !important;
+  height: 484px; 
   padding: 10px;
-  margin: 0 -7px; /* negative indent the amount of the padding to maintain the grid system */
+
+  margin: 10px 3px 10px 3px; /* negative indent the amount of the padding to maintain the grid system */
   -webkit-border-radius: 3px 3px 3px 3px;
      -moz-border-radius: 3px 3px 3px 3px;
           border-radius: 3px 3px 3px 3px;
@@ -74,7 +85,8 @@ html, body {
   padding: 10px;
   position: relative;
   width: auto; /* temporary for messing around with fixed positioning */
-  margin: 0px -7px; /* negative indent the amount of the padding to maintain the grid system */
+  margin: 10px 3px 10px -5px; /* negative indent the amount of the padding to maintain the grid system */
+  
   -webkit-border-radius: 3px 3px 3px 3px;
      -moz-border-radius: 3px 3px 3px 3px;
           border-radius: 3px 3px 3px 3px;
@@ -86,14 +98,14 @@ html, body {
 .aboutbox {
   background-color: #fff;
   padding: 10px;
-  margin: 0px -7px; /* negative indent the amount of the padding to maintain the grid system */
+  margin: 10px 3px 10px -5px; /* negative indent the amount of the padding to maintain the grid system */
   -webkit-border-radius: 3px 3px 3px 3px;
      -moz-border-radius: 3px 3px 3px 3px;
           border-radius: 3px 3px 3px 3px;
   -webkit-box-shadow: 1px 1px 2px rgba(0,0,0,.15);
      -moz-box-shadow: 1px 1px 2px rgba(0,0,0,.15);
           box-shadow: 1px 1px 2px rgba(0,0,0,.15);
-    margin-bottom: 7px;
+    //margin-bottom: 7px;
 }
 
 .container > header-container {
@@ -104,33 +116,49 @@ html, body {
 
 /* Page header tweaks */
 .page-header {
-  background-color: @headerBackground;
+  //background-color: @headerBackground;
+  color: #57A957;
+  /*
   padding: 20px 20px 10px;
   margin: -20px -20px 20px;
   -webkit-border-radius: 6px 6px 0 0;
      -moz-border-radius: 6px 6px 0 0;
           border-radius: 6px 6px 0 0;
+          */
 }
+.simple-site-header {
+   font-family: 'Codystar', cursive;
+   margin-bottom: 6em;
+   text-align: center;
+   padding: 3px;
+   margin: 0px 0px; /* negative indent the amount of the padding to maintain the grid system */
+   color: #08C;
 
+}
 /* Site header - parts from Ethan Turkeltaubc */
 .site-header {
-  background: #FFF url("/assets/themes/twitter-sandbox/pics/seattle.jpg") no-repeat;
-  background-size: cover;
+  //background: #FFF url("/assets/themes/twitter-sandbox/pics/seattle.jpg") no-repeat;
+  //background-size: cover;
+  font-family: 'Codystar', cursive;
+  color: #08C;
   margin-bottom: 6em;
+  text-align: center;
   section {
     @include container;
     padding: 4em 0;
 	text-align: center;
   }
-  /*background-color: @headerBackground;*/
+  //background-color: @headerBackground;
   padding: 5px;
   margin: 7px -7px; /* negative indent the amount of the padding to maintain the grid system */
+  
   -webkit-border-radius: 3px 3px 3px 3px;
      -moz-border-radius: 3px 3px 3px 3px;
           border-radius: 3px 3px 3px 3px;
   -webkit-box-shadow: 1px 1px 2px rgba(0,0,0,.15);
      -moz-box-shadow: 1px 1px 2px rgba(0,0,0,.15);
           box-shadow: 1px 1px 2px rgba(0,0,0,.15);
+          
 }
 
 /* posts index */
